--- a/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
@@ -166,51 +166,266 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4Z-n_lB9N4r9",
+        "outputId": "2602e880-0be7-4c15-86c4-ba995fe0d108",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        }
+      },
+      "source": [
+        "i_antiguedad[:,0]"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6, 5, 0, 3, 5, 2, 5, 5, 1, 2, 1, 5, 2, 3, 4, 4, 4, 4, 5, 3, 0, 5,\n",
+              "       0, 1, 1, 1, 2, 4, 4, 4, 0, 3, 0, 3, 5, 2, 2, 1, 3, 5, 6, 3, 0, 4,\n",
+              "       3, 6, 1, 0, 3, 5, 0, 1, 6, 4, 0, 6, 4, 0, 1, 4, 1, 5, 1, 2, 1, 3,\n",
+              "       4, 0, 2, 6, 5, 4, 0, 2, 4, 4, 6, 2, 1, 2, 2, 1, 4, 2, 5, 3, 4, 3,\n",
+              "       6, 1, 4, 0, 5, 3, 2, 3, 0, 5, 2, 1, 3, 3, 0, 2, 1, 2, 6, 1, 2, 0,\n",
+              "       3, 1, 0, 2, 3, 5, 3, 0, 5, 6, 4, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dz5wp4NaOH_1",
+        "outputId": "da59bebe-3bde-41c7-9210-5ac2980cac38",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "i_antiguedad[50,0]"
+      ],
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GJK16_d_PbTD",
+        "outputId": "607a76de-693c-4f02-a245-00aed5814653",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "x_año[50,0]"
+      ],
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2020"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 175
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M5GpzF0CP2TP",
+        "outputId": "c29cde2a-a95c-409e-94ef-f102110bb454",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "c0[50,0]"
+      ],
+      "execution_count": 176,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 176
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "gJH0X0VOb41h"
       },
       "source": [
         "c0,c1,c2,c3 ,c4 ,c5 ,c6  = [],[],[],[],[],[],[]\n",
-        "c7,c8,c9,c10,c11,c12,c13 = [],[],[],[],[],[],[]\n",
+        "cont=0\n",
+        "for num in  list(range (2019,2021)):   \n",
+        "        cont = cont +1 \n",
+        "        for ciclo in list(range(len(X[:,1]))):            \n",
+        "            if i_antiguedad[ciclo,0] == 0 and x_año[ciclo,0] == num :\n",
+        "              if cont ==1 :\n",
+        "                c0.append(1)\n",
+        "              else:\n",
+        "                c0[ciclo] = 1\n",
+        "            else:\n",
+        "              if cont ==1 :\n",
+        "                c0.append(0)\n",
+        "              else:\n",
+        "                c0[ciclo] = 0\n",
+        "            if i_antiguedad[ciclo,0] == 1 and x_año[ciclo,0] == num :\n",
+        "              if cont ==1 :\n",
+        "                c1.append(1)\n",
+        "              else:\n",
+        "                c1[ciclo] = 1\n",
+        "            else:\n",
+        "              if cont ==1 :\n",
+        "                c1.append(0)\n",
+        "              else:\n",
+        "                c1[ciclo] = 0\n",
+        "            if i_antiguedad[ciclo,0] == 2 and x_año[ciclo,0] == num :\n",
+        "              if cont ==1 :\n",
+        "                c2.append(1)\n",
+        "              else:\n",
+        "                c2[ciclo] = 1\n",
+        "            else:\n",
+        "              if cont ==1 :\n",
+        "                c2.append(0)\n",
+        "              else:\n",
+        "                c2[ciclo] = 0\n",
+        "            if i_antiguedad[ciclo,0] == 3 and x_año[ciclo,0] == num :\n",
+        "              if cont ==1 :\n",
+        "                c3.append(1)\n",
+        "              else:\n",
+        "                c3[ciclo] = 1\n",
+        "            else:\n",
+        "              if cont ==1 :\n",
+        "                c3.append(0)\n",
+        "              else:\n",
+        "                c3[ciclo] = 0\n",
+        "            if i_antiguedad[ciclo,0] == 4 and x_año[ciclo,0] == num :\n",
+        "              if cont ==1 :\n",
+        "                c4.append(1)\n",
+        "              else:\n",
+        "                c4[ciclo] = 1\n",
+        "            else:\n",
+        "              if cont ==1 :\n",
+        "                c4.append(0)\n",
+        "              else:\n",
+        "                c4[ciclo] = 0\n",
+        "            if i_antiguedad[ciclo,0] == 5 and x_año[ciclo,0] == num :\n",
+        "              if cont ==1 :\n",
+        "                c5.append(1)\n",
+        "              else:\n",
+        "                c5[ciclo] = 1\n",
+        "            else:\n",
+        "              if cont ==1 :\n",
+        "                c5.append(0)\n",
+        "              else:\n",
+        "                c5[ciclo] = 0\n",
+        "            if i_antiguedad[ciclo,0] == 6 and x_año[ciclo,0] == num :\n",
+        "              if cont ==1 :\n",
+        "                c6.append(1)\n",
+        "              else:\n",
+        "                c6[ciclo] = 1\n",
+        "            else:\n",
+        "              if cont ==1 :\n",
+        "                c6.append(0)\n",
+        "              else:\n",
+        "                c6[ciclo] = 0\n",
+        "            \n",
         "\n",
-        "for num in  range (2019, 2020):    \n",
-        "    for ciclo in list(range(len(X[:,1]))):\n",
-        "        if i_antiguedad[ciclo,0] == 0 and x_año[ciclo,0] == num :\n",
-        "          c0.append(1)\n",
-        "        else:\n",
-        "          c0.append(0)\n",
-        "        if i_antiguedad[ciclo,0] == 1 and x_año[ciclo,0] == num :\n",
-        "          c1.append(1)\n",
-        "        else:\n",
-        "          c1.append(0)\n",
-        "        if i_antiguedad[ciclo,0] == 2 and x_año[ciclo,0] == num :\n",
-        "          c2.append(1)\n",
-        "        else:\n",
-        "          c2.append(0)\n",
-        "        if i_antiguedad[ciclo,0] == 3 and x_año[ciclo,0] == num :\n",
-        "          c3.append(1)\n",
-        "        else:\n",
-        "          c3.append(0)\n",
-        "        if i_antiguedad[ciclo,0] == 4 and x_año[ciclo,0] == num :\n",
-        "          c4.append(1)\n",
-        "        else:\n",
-        "          c4.append(0)\n",
-        "        if i_antiguedad[ciclo,0] == 5 and x_año[ciclo,0] == num :\n",
-        "          c5.append(1)\n",
-        "        else:\n",
-        "          c5.append(0)\n",
-        "        if i_antiguedad[ciclo,0] >= 6 and x_año[ciclo,0] == num :\n",
-        "          c6.append(1)\n",
-        "        else:\n",
-        "          c6.append(0)\n"
+        "c0  = np.array(c0 )[:,np.newaxis]\n",
+        "c1  = np.array(c1 )[:,np.newaxis]\n",
+        "c2  = np.array(c2 )[:,np.newaxis]\n",
+        "c3  = np.array(c3 )[:,np.newaxis]\n",
+        "c4  = np.array(c4 )[:,np.newaxis]\n",
+        "c5  = np.array(c5 )[:,np.newaxis]\n",
+        "c6  = np.array(c6 )[:,np.newaxis]"
       ],
-      "execution_count": null,
+      "execution_count": 173,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "jhXkWbBQFxEu",
+        "outputId": "4f13d56a-4132-4275-c72f-f3143f3895f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        }
+      },
+      "source": [
+        "c0[:,0]"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+              "       1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+              "       0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+              "       0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+              "       0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+              "       0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zPAqqmtHFw5k"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "aGhtYHLm7CJn",
-        "outputId": "643b900d-3cf0-4864-90cd-d66d27a53aec",
+        "outputId": "37788459-95d5-403e-f099-b4d6631248fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -431,7 +646,7 @@
         "plt.title('Bajas por antiguedad -mas de 5 años-')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "display_data",
