--- a/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
@@ -246,14 +246,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oDKLYZdIhGDl"
+        "id": "oDKLYZdIhGDl",
+        "outputId": "0dad89cc-1874-4ab1-9504-144a392989cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        }
       },
       "source": [
-        "plt.scatter( np.logical_and( i_año[:,0] == 0 , ( x_mes[ c0[:,0]==1 , 0 ] ) ), np.logical_and( i_año[:,0] == 0 , ( Y[ c0[:,0]==1 , 0 ] ) ), \n",
-        "            c=\"black\", marker='^', alpha=0.5)            "
+        "plt.scatter( np.logical_and( i_año[:,0] == 0 , ( x_mes[ c0[:,0]==1 , 0 ] ) ), np.logical_and( i_año[:,0] == 0 , ( Y[ c0[:,0]==1 , 0 ] ) ), c=\"black\", marker='^', alpha=0.5)            "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 238,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-238-6754eba5ac0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogical_and\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mi_año\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mx_mes\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0mc0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogical_and\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mi_año\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0mc0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"black\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'^'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (122,) (19,) "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
