--- a/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v2.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 56,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "1589ad02-3212-471c-f5ea-688ed75df1b8",
+        "outputId": "01de4f8e-72ac-4eb1-dd18-d4c1071f1fb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 57,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "Y  = data.iloc[:,2].values\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 58,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "x_año = np.array(x_año)[:,np.newaxis]\n",
         "x_mes = np.array(x_mes)[:,np.newaxis]"
       ],
-      "execution_count": 59,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
         "        i_antiguedad.append(6) \n",
         "i_antiguedad = np.array(i_antiguedad)[:,np.newaxis]"
       ],
-      "execution_count": 60,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -240,34 +240,70 @@
         "c5  = np.array(c5 )[:,np.newaxis]\n",
         "c6  = np.array(c6 )[:,np.newaxis]"
       ],
-      "execution_count": 195,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oDKLYZdIhGDl",
-        "outputId": "0dad89cc-1874-4ab1-9504-144a392989cb",
+        "id": "oDKLYZdIhGDl"
+      },
+      "source": [
+        "colores = {0:\"Black\",1:\"Red\",2:\"Orange\",3:\"yellow\",4:\"Blue\",5:\"violet\",6:\"green\"}\n",
+        "fig, ax = plt.subplots()\n",
+        "for species in set(i_año[:,0]):\n",
+        "    ax.scatter(\n",
+        "        data.sepal_length[data.species == species],\n",
+        "        data.sepal_width[data.species == species],\n",
+        "        s = 30,\n",
+        "        c = colors[species],\n",
+        "        label = species)\n",
+        "plt.legend()\n",
+        "plt.show()\n",
+        "\n",
+        "for num in  list(range (2019,2021)): \n",
+        "  c0[:,0]==1\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n0uDUb3iLXj6"
+      },
+      "source": [
+        "colores"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-60RB8gXHcXW",
+        "outputId": "cec4a687-6d1a-48c2-ebf8-d101e76a2bac",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 180
+          "height": 34
         }
       },
       "source": [
-        "plt.scatter( np.logical_and( i_año[:,0] == 0 , ( x_mes[ c0[:,0]==1 , 0 ] ) ), np.logical_and( i_año[:,0] == 0 , ( Y[ c0[:,0]==1 , 0 ] ) ), c=\"black\", marker='^', alpha=0.5)            "
+        "set(i_año[:,0])\n"
       ],
-      "execution_count": 238,
+      "execution_count": 34,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-238-6754eba5ac0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogical_and\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mi_año\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mx_mes\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0mc0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogical_and\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mi_año\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0mc0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"black\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'^'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (122,) (19,) "
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{0, 1}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
         }
       ]
     },
@@ -305,7 +341,7 @@
         "plt.scatter(x_mes[ c6[:,0]==1 , 0 ], Y[ c6[:,0]==1 , 0 ], \n",
         "            c=\"green\", marker='^', alpha=0.5)  "
       ],
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
