--- a/Regresión/Regresion_Bajas_Antiguedad_v3.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v3.ipynb
@@ -199,34 +199,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hVAmcaTPRxQy",
-        "outputId": "b5b62e91-a142-45f9-9956-2e82d8db86e5",
+        "id": "aLY06foCdDWb",
+        "outputId": "80354481-1ddb-43c1-cbd4-cfdcb3350ec8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 34
         }
       },
       "source": [
-        "c0[:,0]"
+        "X[0,1]"
       ],
-      "execution_count": 41,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0,\n",
-              "       1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
-              "       0, 0, 0, 1, 0, 0, 2, 0, 0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "       0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "       0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 2,\n",
-              "       0, 0, 1, 0, 0, 0, 0, 2, 0, 0, 0, 1])"
+              "20"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 85
         }
       ]
     },
@@ -234,21 +229,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "oDKLYZdIhGDl",
-        "outputId": "64b3227e-0c08-453b-d464-0984d4f92b43",
+        "outputId": "be68cb8a-6f0d-424f-9294-c05b1fdc04e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
         }
       },
       "source": [
-        "\n",
+        "color_={0:\"Black\",1:\"Red\",2:\"Orange\",3:\"Yellow\",4:\"Blue\",5:\"Violet\",6:\"Green\"}\n",
         "fig, ax = plt.subplots()\n",
-        "for ciclo in list(range (2019,2021)):  \n",
-        "  if ciclo == 2019:    \n",
+        "for ciclo in list(range (2019,2021)):     \n",
+        "  if ciclo == 2019:  \n",
         "    ax.scatter(\n",
         "    x_mes[ c0[:,0]==1,0],\n",
         "    Y[ c0[:,0]==1,0],\n",
-        "    c=\"black\",\n",
+        "    c= color_[0],\n",
         "    marker = \"^\",\n",
         "    label = ciclo,\n",
         "    alpha=0.5)\n",
@@ -256,7 +251,7 @@
         "    ax.scatter(\n",
         "    x_mes[ c0[:,0]==2,0],\n",
         "    Y[ c0[:,0]==2,0],\n",
-        "    c=\"black\",\n",
+        "    c= color_[0],\n",
         "    marker = \"o\",\n",
         "    label = ciclo,\n",
         "    alpha=0.5)\n",
@@ -264,7 +259,7 @@
         "plt.legend()\n",
         "plt.show()\n"
       ],
-      "execution_count": 44,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "display_data",
