--- a/Regresión/Regresion_Bajas_Antiguedad_v3.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v3.ipynb
@@ -806,7 +806,7 @@
         "id": "hpFu72_s7-mj"
       },
       "source": [
-        "## Modelo Polinómico"
+        "## Modelo SVM"
       ]
     },
     {
