--- a/Regresión/Regresion_Bajas_Antiguedad_v3.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v3.ipynb
@@ -708,41 +708,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hgCuk9XMWJAj",
-        "outputId": "1d9ebd07-19b0-4231-e8ff-2fe5c73ad716",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 104
-        }
+        "id": "hgCuk9XMWJAj"
       },
       "source": [
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.1)\n",
         "svr.fit(x_train,y_train)"
       ],
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='scale',\n",
-              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 24
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EKtxSMztXyt8"
+      },
+      "source": [
+        "y_predic = svr.predict(x_test)"
+      ],
+      "execution_count": 26,
+      "outputs": []
     }
   ]
 }
