--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -66,22 +66,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "aa21d26f-c1d2-4e31-e8c8-d77f8fcc6795",
+        "outputId": "7c648a9c-d45f-407a-ad09-92dd931d2df7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 54
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -93,12 +93,23 @@
         "id": "0JYqth2Ty8-k"
       },
       "source": [
-        "data = pd.read_csv('/content/drive/My Drive/Dataset/DBajas_ANTIGUEDAD.txt',delimiter='~')\n",
-        "X  = data.iloc[:,:-1].values\n",
-        "Y  = data.iloc[:,2].values\n",
+        "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
+        "X  = data.iloc[:,:-1].query('ANIO_BAJA == 2019').values\n",
+        "Y  = data.iloc[:,3].values\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 3,
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i0iFM0cypQsX"
+      },
+      "source": [
+        "X"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +135,7 @@
         "x_año = np.array(x_año)[:,np.newaxis]\n",
         "x_mes = np.array(x_mes)[:,np.newaxis]"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +171,7 @@
         "        i_antiguedad.append(6) \n",
         "i_antiguedad = np.array(i_antiguedad)[:,np.newaxis]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,7 +257,7 @@
         "c5  = np.array(c5 )[:,np.newaxis]\n",
         "c6  = np.array(c6 )[:,np.newaxis]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +393,7 @@
         "plt.title('Bajas por antiguedad')\n",
         "plt.show()\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -686,7 +697,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.svm import SVR"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -702,7 +713,7 @@
         "\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y ,test_size=0.2, random_state=0)"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +736,7 @@
       "source": [
         "y_predic = svr.predict(x_test)"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -743,7 +754,7 @@
         "plt.plot(x_test,y_predic, color='Blue' )\n",
         "plt.show()"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -783,7 +794,7 @@
         "  ax.set_zlabel('z')\n",
         "plot_3D()"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -830,7 +841,7 @@
         "    ax.set_zlabel('z')        \n",
         "plot_3D()   "
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -861,7 +872,7 @@
         "#Precisión del modelo\n",
         "print(svr.score(x_train,y_train))"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,7 +896,7 @@
       "source": [
         "print(svr.score(x_test,y_test))"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -909,7 +920,7 @@
       "source": [
         "print(svr.score(x_test,y_predic))"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,7 +944,7 @@
       "source": [
         "y_test"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -975,7 +986,7 @@
       "source": [
         "svr.support_vectors_"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
