--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -104,39 +104,113 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "i0iFM0cypQsX"
+        "id": "i0iFM0cypQsX",
+        "outputId": "b71607fa-e007-471b-adda-9de59e0926f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
       "source": [
         "X"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9uNGk3W0Oj0I"
-      },
-      "source": [
-        "i_año = [] # identificador de año\n",
-        "x_año = [] # año\n",
-        "x_mes = [] # mes\n",
-        "\n",
-        "for ciclo in X[:,0]:\n",
-        "    x_mes.append(int(str(ciclo)[4:6]))\n",
-        "    if str(ciclo)[0:4] == \"2019\":\n",
-        "        x_año.append(2019)        \n",
-        "        i_año.append(0) \n",
-        "    if str(ciclo)[0:4] == \"2020\":\n",
-        "        x_año.append(2020)        \n",
-        "        i_año.append(1)\n",
-        "      \n",
-        "i_año = np.array(i_año)[:,np.newaxis]\n",
-        "x_año = np.array(x_año)[:,np.newaxis]\n",
-        "x_mes = np.array(x_mes)[:,np.newaxis]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2019,    1,    3],\n",
+              "       [2019,    7,    6],\n",
+              "       [2019,    2,    1],\n",
+              "       [2019,    9,    1],\n",
+              "       [2019,    6,    6],\n",
+              "       [2019,    4,    1],\n",
+              "       [2019,   10,    6],\n",
+              "       [2019,    1,    6],\n",
+              "       [2019,    7,    5],\n",
+              "       [2019,    6,    5],\n",
+              "       [2019,    2,    6],\n",
+              "       [2019,    9,    2],\n",
+              "       [2019,    2,    3],\n",
+              "       [2019,    8,    1],\n",
+              "       [2019,    6,    2],\n",
+              "       [2019,    7,    7],\n",
+              "       [2019,    4,    5],\n",
+              "       [2019,    9,    3],\n",
+              "       [2019,    8,    7],\n",
+              "       [2019,   10,    2],\n",
+              "       [2019,   10,    5],\n",
+              "       [2019,   10,    4],\n",
+              "       [2019,    7,    3],\n",
+              "       [2019,   12,    3],\n",
+              "       [2019,    4,    7],\n",
+              "       [2019,    4,    4],\n",
+              "       [2019,    5,    5],\n",
+              "       [2019,   11,    7],\n",
+              "       [2019,    3,    6],\n",
+              "       [2019,   10,    1],\n",
+              "       [2019,    3,    1],\n",
+              "       [2019,   10,    3],\n",
+              "       [2019,    4,    3],\n",
+              "       [2019,   12,    2],\n",
+              "       [2019,   12,    1],\n",
+              "       [2019,    1,    5],\n",
+              "       [2019,   12,    7],\n",
+              "       [2019,    5,    7],\n",
+              "       [2019,    8,    3],\n",
+              "       [2019,   11,    6],\n",
+              "       [2019,    3,    4],\n",
+              "       [2019,    5,    1],\n",
+              "       [2019,    6,    7],\n",
+              "       [2019,   12,    5],\n",
+              "       [2019,    8,    5],\n",
+              "       [2019,    6,    3],\n",
+              "       [2019,   11,    5],\n",
+              "       [2019,    8,    6],\n",
+              "       [2019,    9,    5],\n",
+              "       [2019,    1,    2],\n",
+              "       [2019,    1,    1],\n",
+              "       [2019,   11,    3],\n",
+              "       [2019,    1,    4],\n",
+              "       [2019,    8,    2],\n",
+              "       [2019,   12,    4],\n",
+              "       [2019,    9,    4],\n",
+              "       [2019,    8,    4],\n",
+              "       [2019,    3,    5],\n",
+              "       [2019,   11,    4],\n",
+              "       [2019,    4,    2],\n",
+              "       [2019,   11,    2],\n",
+              "       [2019,    7,    4],\n",
+              "       [2019,    6,    4],\n",
+              "       [2019,    5,    3],\n",
+              "       [2019,    2,    2],\n",
+              "       [2019,    7,    2],\n",
+              "       [2019,    3,    7],\n",
+              "       [2019,    2,    4],\n",
+              "       [2019,    5,    2],\n",
+              "       [2019,    2,    7],\n",
+              "       [2019,    7,    1],\n",
+              "       [2019,    2,    5],\n",
+              "       [2019,    5,    6],\n",
+              "       [2019,   12,    6],\n",
+              "       [2019,   11,    1],\n",
+              "       [2019,    5,    4],\n",
+              "       [2019,    4,    6],\n",
+              "       [2019,    9,    7],\n",
+              "       [2019,    3,    3],\n",
+              "       [2019,    3,    2],\n",
+              "       [2019,   10,    7],\n",
+              "       [2019,    9,    6],\n",
+              "       [2019,    6,    1]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -144,14 +218,14 @@
         "id": "OsUZIAN9QLfm"
       },
       "source": [
-        "# Años de antiguedad \n",
-        "# 0 -> Negro\n",
-        "# 1 -> Rojo\n",
-        "# 2 -> Naranja\n",
-        "# 3 -> Amarillo \n",
-        "# 4 -> Azul\n",
-        "# 5 -> Violeta \n",
-        "# 6 -> Verde   años de antiguedad desde 6 años en adelante\n",
+        "# Periodicidad\n",
+        "# 1 -> 1TRIM - Color: Negro\n",
+        "# 2 -> 2TRIM - Color: Rojo\n",
+        "# 3 -> 3TRIM - Color: Naranja\n",
+        "# 4 -> 4TRIM - Color: Amarillo \n",
+        "# 5 -> 1-2 años - Color: Azul\n",
+        "# 6 -> 3-4 años - Color: Violeta \n",
+        "# 7 -> Mayor/igual 5 años - Color: Verde   \n",
         "\n",
         "i_antiguedad = []\n",
         "for ciclo in X[:,1]:\n",
