--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -220,12 +220,12 @@
       "source": [
         "# Periodicidad\n",
         "# 1 -> 1TRIM - Color: Negro\n",
-        "# 2 -> 2TRIM - Color: Rojo\n",
-        "# 3 -> 3TRIM - Color: Naranja\n",
-        "# 4 -> 4TRIM - Color: Amarillo \n",
-        "# 5 -> 1-2 años - Color: Azul\n",
-        "# 6 -> 3-4 años - Color: Violeta \n",
-        "# 7 -> Mayor/igual 5 años - Color: Verde   \n",
+        "# 2 -> 2TRIM - Color: tomato\n",
+        "# 3 -> 3TRIM - Color: fuchsia\n",
+        "# 4 -> 4TRIM - Color: darkcyan \n",
+        "# 5 -> 1-2 años - Color: Blue\n",
+        "# 6 -> 3-4 años - Color: purple \n",
+        "# 7 -> Mayor/igual 5 años - Color: Green   \n",
         "\n",
         "i_antiguedad = []\n",
         "for ciclo in X[:,1]:\n",
