--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -104,85 +104,37 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ntxOvrnXs5la"
+      },
+      "source": [
+        "X[:,2]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "gJH0X0VOb41h"
       },
       "source": [
-        "c0,c1,c2,c3 ,c4 ,c5 ,c6  = [],[],[],[],[],[],[]\n",
-        "cont=0\n",
-        "for num in  list(range (2019,2021)):   \n",
-        "        cont = cont +1 \n",
-        "        for ciclo in list(range(len(X[:,1]))):  \n",
+        "# Periodicidad\n",
+        "# 1 -> 1TRIM - Color: Negro\n",
+        "# 2 -> 2TRIM - Color: tomato\n",
+        "# 3 -> 3TRIM - Color: fuchsia\n",
+        "# 4 -> 4TRIM - Color: darkcyan \n",
+        "# 5 -> 1-2 años - Color: Blue\n",
+        "# 6 -> 3-4 años - Color: purple \n",
+        "# 7 -> Mayor/igual 5 años - Color: Green\n",
         "\n",
-        "            if i_antiguedad[ciclo,0] == 0 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c0.append(cont)\n",
-        "              else:\n",
-        "                c0[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c0.append(0)  \n",
+        "c= []\n",
         "\n",
-        "            if i_antiguedad[ciclo,0] == 1 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c1.append(cont)\n",
-        "              else:\n",
-        "                c1[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c1.append(0) \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 2 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c2.append(cont)\n",
-        "              else:\n",
-        "                c2[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c2.append(0) \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 3 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c3.append(cont)\n",
-        "              else:\n",
-        "                c3[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c3.append(0) \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 4 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c4.append(cont)\n",
-        "              else:\n",
-        "                c4[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c4.append(0) \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 5 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c5.append(cont)\n",
-        "              else:\n",
-        "                c5[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c5.append(0)   \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 6 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c6.append(cont)\n",
-        "              else:\n",
-        "                c6[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c6.append(0)                          \n",
-        "\n",
-        "c0  = np.array(c0 )[:,np.newaxis]\n",
-        "c1  = np.array(c1 )[:,np.newaxis]\n",
-        "c2  = np.array(c2 )[:,np.newaxis]\n",
-        "c3  = np.array(c3 )[:,np.newaxis]\n",
-        "c4  = np.array(c4 )[:,np.newaxis]\n",
-        "c5  = np.array(c5 )[:,np.newaxis]\n",
-        "c6  = np.array(c6 )[:,np.newaxis]"
+        "for _ in list(range(len(X[:,1]))):  \n",
+        "  if X[:,1] == 1 and X[:,2] == 1 :    \n",
+        "      c.append(1)\n",
+        "  else:\n",
+        "      c0.append(0)  \n",
+        "c = np.array(c )[:,np.newaxis]"
       ],
       "execution_count": null,
       "outputs": []
