--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -98,38 +98,35 @@
         "Y  = data.iloc[:,3].values\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 41,
+      "execution_count": 62,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ntxOvrnXs5la",
-        "outputId": "0cadd7f9-2876-4358-e529-6e53e39777ed",
+        "id": "MiIJ5e4i0qpH",
+        "outputId": "80951701-7fa8-4d5e-fde6-0012b651adda",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 34
         }
       },
       "source": [
-        "X[:,2]"
+        "c1[50,0]"
       ],
-      "execution_count": 50,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([3, 6, 1, 1, 6, 1, 6, 6, 5, 5, 6, 2, 3, 1, 2, 7, 5, 3, 7, 2, 5, 4,\n",
-              "       3, 3, 7, 4, 5, 7, 6, 1, 1, 3, 3, 2, 1, 5, 7, 7, 3, 6, 4, 1, 7, 5,\n",
-              "       5, 3, 5, 6, 5, 2, 1, 3, 4, 2, 4, 4, 4, 5, 4, 2, 2, 4, 4, 3, 2, 2,\n",
-              "       7, 4, 2, 7, 1, 5, 6, 6, 1, 4, 6, 7, 3, 2, 7, 6, 1])"
+              "1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 84
         }
       ]
     },
@@ -139,83 +136,25 @@
         "id": "gJH0X0VOb41h"
       },
       "source": [
-        "c0,c1,c2,c3 ,c4 ,c5 ,c6  = [],[],[],[],[],[],[]\n",
-        "cont=0\n",
-        "for num in  list(range (1,13)):   \n",
-        "        cont = cont +1 \n",
-        "        for num2 in  list(range (1,8)):  \n",
-        "            if X[:,1] == num and X[:,2] == num2 :\n",
-        "              if cont ==1 :\n",
-        "                c0.append(cont)\n",
-        "              else:\n",
-        "                c0[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c0.append(0)  \n",
+        "c1,c2,c3,c4,c5,c6,c7 = [],[],[],[],[],[],[]\n",
         "\n",
-        "            if i_antiguedad[ciclo,0] == 1 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c1.append(cont)\n",
-        "              else:\n",
-        "                c1[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c1.append(0) \n",
+        "for num in  list(range (1,13)):          \n",
+        "  for num2 in  list(range (1,8)):  \n",
+        "    for ciclo in list(range(len(X[:,0]))):  \n",
+        "      if X[ciclo,1] == num and X[ciclo,2] == num2 :              \n",
+        "        c1.append(1)\n",
+        "      else:    \n",
+        "        c1.append(0)  \n",
         "\n",
-        "            if i_antiguedad[ciclo,0] == 2 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c2.append(cont)\n",
-        "              else:\n",
-        "                c2[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c2.append(0) \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 3 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c3.append(cont)\n",
-        "              else:\n",
-        "                c3[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c3.append(0) \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 4 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c4.append(cont)\n",
-        "              else:\n",
-        "                c4[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c4.append(0) \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 5 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c5.append(cont)\n",
-        "              else:\n",
-        "                c5[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c5.append(0)   \n",
-        "\n",
-        "            if i_antiguedad[ciclo,0] == 6 and x_año[ciclo,0] == num :\n",
-        "              if cont ==1 :\n",
-        "                c6.append(cont)\n",
-        "              else:\n",
-        "                c6[ciclo] = cont\n",
-        "            else:\n",
-        "              if cont ==1 :\n",
-        "                c6.append(0)                          \n",
-        "\n",
-        "c0  = np.array(c0 )[:,np.newaxis]\n",
         "c1  = np.array(c1 )[:,np.newaxis]\n",
-        "c2  = np.array(c2 )[:,np.newaxis]\n",
-        "c3  = np.array(c3 )[:,np.newaxis]\n",
-        "c4  = np.array(c4 )[:,np.newaxis]\n",
-        "c5  = np.array(c5 )[:,np.newaxis]\n",
-        "c6  = np.array(c6 )[:,np.newaxis]"
+        "#c2  = np.array(c2 )[:,np.newaxis]\n",
+        "#c3  = np.array(c3 )[:,np.newaxis]\n",
+        "#c4  = np.array(c4 )[:,np.newaxis]\n",
+        "#c5  = np.array(c5 )[:,np.newaxis]\n",
+        "#c6  = np.array(c6 )[:,np.newaxis]\n",
+        "#c7  = np.array(c7 )[:,np.newaxis]"
       ],
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": []
     },
     {
